// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should change class when hovered 1`] = `
<a
  className="normal link"
  href="facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Link should change class when hovered 2`] = `
<a
  className="hovered link"
  href="facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Link should change class when hovered 3`] = `
<a
  className="normal link"
  href="facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;
